# archicad-addon-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeModules.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md  conanfile.py  conanfile.txt  config.json
.github/workflows/: build.yml  release_pipeline.yml
RFIX/: AddOnFix.grc
RFIX.mac/: Info.plist
RFIX.win/: AddOnMain.rc2
RINT/: AddOn.grc  BuiltInLibParts.grc
RINT/ACLib/Src/Fire Rating Graphical Label/: ancestry.xml  calledmacros.xml  libpartdata.xml  libpartdocs.xml  locdata.xml  paramlist.xml
RINT/ACLib/Src/Fire Rating Graphical Label/scripts/: 1d.gdl  2d.gdl  ui.gdl  vl.gdl
RJPN/: AddOn.grc
Sources/AddOn/: APIEnvir.h  AddOnMain.cpp  ResourceIDs.hpp
Sources/AddOnResources/: ResourceMDIDIds.hpp.in
Sources/AddOnResources/RFIX/: AddOnFix.grc
Sources/AddOnResources/RFIX.mac/: Info.plist  compileGRCs.pl
Sources/AddOnResources/RFIX.win/: CompileResources.py
Sources/AddOnResources/RINT/: AddOn.grc
Sources/AddOnResources/Tools/: About.md  AddModules.py  AddOn-More.vcxproj  AddOn.vcxproj  CompileResources.py  ModuleTypes.py  test.py
Src/: AddOnMain.cpp  ExamplePrecompiledHeader.hpp  FCConverter.cpp  FCConverter.hpp  FCDialog.cpp  FCDialog.hpp  FavoriteConverterDialog.cpp  FavoriteConverterDialog.hpp  FavoriteConverterPrecompiledHeader.hpp  LibraryMigrationInfo.cpp  LibraryMigrationInfo.hpp  LibraryMigrationInfoIO.cpp  LibraryMigrationInfoIO.hpp  ResourceIds.hpp
Tools/: AddModules.py  CMakeCommon.cmake  CompileResources.py  README.md  comments.test
